syntax = "proto3";
package kratos.api;

option go_package = "message/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Config config = 1;
}

message Config{
  Server server = 1;
  Data data = 2;
  Log log = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message Cos{
    string url = 1;
    string secret_id = 2;
    string secret_key = 3;
  }
  message RocketMq{
    string serverAddress = 1;
    string secretKey = 2;
    string accessKey = 3;
    string nameSpace = 4;
    string groupName = 5;
  }
  message ElasticSearch{
    string endpoint = 1;
    string user = 2;
    string password = 3;
  }
  message News{
    string url = 1;
  }
  Database database = 1;
  Redis redis = 2;
  Cos cos = 3;
  RocketMq rocketmq = 4;
  ElasticSearch elasticSearch = 6;
  News news = 7;
}

message Log {
  string host = 1;
  string accessKeyID = 2;
  string accessKeySecret = 3;
  string topicID = 4;
}
